--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,6 +275,8 @@ endif()
 if (NOT LLVM_ENABLE_EH)
   if (ENABLE_SOLVER_METASMT)
     message(WARNING "Not disabling exceptions because metaSMT uses them")
+  elseif (ENABLE_SOLVER_Z3)
+    message(WARNING "Not disabling exceptions because Z3 uses them")
   else()
     klee_component_add_cxx_flag("-fno-exceptions" REQUIRED)
   endif()
